@@ -15,14 +15,17 @@
  *
  */
 
-package io.appform.dropwizard.sharding;
+package io.appform.dropwizard.sharding.dao;
+
+import io.appform.dropwizard.sharding.BundleBasedTestBase;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Maps;
-import io.appform.dropwizard.sharding.dao.MultiTenantRelationalDao;
+import io.appform.dropwizard.sharding.dao.RelationalDao;
 import io.appform.dropwizard.sharding.dao.WrapperDao;
 import io.appform.dropwizard.sharding.dao.interceptors.TimerObserver;
 import io.appform.dropwizard.sharding.dao.listeners.LoggingListener;
@@ -48,18 +51,21 @@ import org.junit.jupiter.api.Test;
  * Top level test. Saves an order using custom dao to a shard belonging to a particular customer.
  * Core systems are not mocked. Uses H2 for testing.
  */
-public abstract class MultiTenantDBShardingBundleTestBase extends MultiTenantBundleBasedTestBase {
+public abstract class DBShardingBundleTestBase extends BundleBasedTestBase {
 
     @Test
     public void testBundle() throws Exception {
-        MultiTenantDBShardingBundleBase<TestConfig> bundle = getBundle();
+        DBShardingBundleBase<TestConfig> bundle = getBundle();
         bundle.initialize(bootstrap);
         bundle.run(testConfig, environment);
         bundle.registerObserver(new TimerObserver());
         bundle.registerListener(new LoggingListener());
-        WrapperDao<Order, OrderDao> tenant1Dao = bundle.createWrapperDao("TENANT1", OrderDao.class);
-        MultiTenantRelationalDao<Order> tenant1RelDao = bundle.createRelatedObjectDao(Order.class);
-        MultiTenantRelationalDao<OrderItem> tenant1OrderItemDao = bundle.createRelatedObjectDao(OrderItem.class);
+        WrapperDao<Order, OrderDao> dao = bundle.createWrapperDao(OrderDao.class);
+
+        RelationalDao<Order> rDao = bundle.createRelatedObjectDao(Order.class);
+
+        RelationalDao<OrderItem> orderItemDao = bundle.createRelatedObjectDao(OrderItem.class);
+
 
         final String customer = "customer1";
 
@@ -68,6 +74,7 @@ public abstract class MultiTenantDBShardingBundleTestBase extends MultiTenantBun
                 .orderId("OD00001")
                 .amount(100)
                 .build();
+
         OrderItem itemA = OrderItem.builder()
                 .order(order)
                 .name("Item A")
@@ -76,27 +83,43 @@ public abstract class MultiTenantDBShardingBundleTestBase extends MultiTenantBun
                 .order(order)
                 .name("Item B")
                 .build();
-        order.setItems(List.of(itemA, itemB));
-        Order saveResult = tenant1Dao.forParent(customer).save(order);
+
+        order.setItems(ImmutableList.of(itemA, itemB));
+
+        Order saveResult = dao.forParent(customer).save(order);
+
         long saveId = saveResult.getId();
-        Order result = tenant1Dao.forParent(customer).get(saveId);
+
+        Order result = dao.forParent(customer).get(saveId);
+
         assertEquals(saveResult.getId(), result.getId());
         assertEquals(saveResult.getId(), result.getId());
-        Optional<Order> newOrder = tenant1RelDao.save("TENANT1", "customer1", order);
+
+        Optional<Order> newOrder = rDao.save("customer1", order);
+
         assertTrue(newOrder.isPresent());
+
         long generatedId = newOrder.get().getId();
-        Optional<Order> checkOrder = tenant1RelDao.get("TENANT1","customer1", generatedId);
+
+        Optional<Order> checkOrder = rDao.get("customer1", generatedId);
+
         assertEquals(100, checkOrder.get().getAmount());
-        tenant1RelDao.update("TENANT1","customer1", saveId, foundOrder -> {
+
+        rDao.update("customer1", saveId, foundOrder -> {
             foundOrder.setAmount(200);
             return foundOrder;
         });
-        Optional<Order> modifiedOrder = tenant1RelDao.get("TENANT1","customer1", saveId);
+
+        Optional<Order> modifiedOrder = rDao.get("customer1", saveId);
         assertEquals(200, modifiedOrder.get().getAmount());
+
         assertTrue(checkOrder.isPresent());
+
         assertEquals(newOrder.get().getId(), checkOrder.get().getId());
+
         Map<String, Object> blah = Maps.newHashMap();
-        tenant1RelDao.get("TENANT1","customer1", generatedId, foundOrder -> {
+
+        rDao.get("customer1", generatedId, foundOrder -> {
             if (null == foundOrder) {
                 return Collections.emptyList();
             }
@@ -104,13 +127,15 @@ public abstract class MultiTenantDBShardingBundleTestBase extends MultiTenantBun
             blah.put("count", itemList.size());
             return itemList;
         });
+
         assertEquals(2, blah.get("count"));
-        List<OrderItem> orderItems = tenant1OrderItemDao.select("TENANT1","customer1",
+
+        List<OrderItem> orderItems = orderItemDao.select("customer1",
                 DetachedCriteria.forClass(OrderItem.class)
                         .createAlias("order", "o")
                         .add(Restrictions.eq("o.orderId", "OD00001")), 0, 10);
         assertEquals(2, orderItems.size());
-        tenant1OrderItemDao.update("TENANT1","customer1",
+        orderItemDao.update("customer1",
                 DetachedCriteria.forClass(OrderItem.class)
                         .createAlias("order", "o")
                         .add(Restrictions.eq("o.orderId", "OD00001")),
@@ -119,7 +144,8 @@ public abstract class MultiTenantDBShardingBundleTestBase extends MultiTenantBun
                         .order(item.getOrder())
                         .name("Item AA")
                         .build());
-        orderItems = tenant1OrderItemDao.select("TENANT1","customer1",
+
+        orderItems = orderItemDao.select("customer1",
                 DetachedCriteria.forClass(OrderItem.class)
                         .createAlias("order", "o")
                         .add(Restrictions.eq("o.orderId", "OD00001")), 0, 10);
@@ -129,19 +155,17 @@ public abstract class MultiTenantDBShardingBundleTestBase extends MultiTenantBun
 
     @Test
     public void testBundleWithShardBlacklisted() throws Exception {
-        MultiTenantDBShardingBundleBase<TestConfig> bundle = getBundle();
+        DBShardingBundleBase<TestConfig> bundle = getBundle();
         bundle.initialize(bootstrap);
         bundle.run(testConfig, environment);
-        //one for each tenant
-        assertEquals(2, bundle.healthStatus().size());
-        bundle.getShardManagers().get("TENANT1").blacklistShard(1);
+        bundle.getShardManager().blacklistShard(1);
         //no healthchecks for blacklisting aware bundle
-        assertEquals(0, bundle.healthStatus().get("TENANT1").size());
+        assertEquals(0, bundle.healthStatus().size());
     }
 
     @Test
     public void testRegisterEntityClassesBeforeRun() {
-        MultiTenantDBShardingBundleBase<TestConfig> bundle = getBundle();
+        DBShardingBundleBase<TestConfig> bundle = getBundle();
         bundle.initialize(bootstrap);
         bundle.registerEntities(PendingRegistrationTestEntity.class, PendingRegistrationTestEntityWithAIId.class);
         bundle.run(testConfig, environment);
@@ -155,9 +179,10 @@ public abstract class MultiTenantDBShardingBundleTestBase extends MultiTenantBun
     @SneakyThrows
     @SuppressWarnings("unchecked")
     public void testRegisterAlreadyRegisteredEntityClassesBeforeRun() {
-        MultiTenantDBShardingBundleBase<TestConfig> bundle = getBundle();
+        DBShardingBundleBase<TestConfig> bundle = getBundle();
         bundle.initialize(bootstrap);
-        final var initializedEntities = (List<Class<?>>) FieldUtils.readField(bundle, "initialisedEntities", true);
+        final var delegate = FieldUtils.readField(bundle, "delegate", true);
+        final var initializedEntities = (List<Class<?>>) FieldUtils.readField(delegate, "initialisedEntities", true);
         final var alreadyRegisteredEntityClasses = initializedEntities.toArray(new Class<?>[0]);
         Assertions.assertDoesNotThrow(() -> bundle.registerEntities(alreadyRegisteredEntityClasses));
         Assertions.assertDoesNotThrow(() -> bundle.run(testConfig, environment));
@@ -165,7 +190,7 @@ public abstract class MultiTenantDBShardingBundleTestBase extends MultiTenantBun
 
     @Test
     public void testRegisterEntityPackagesBeforeRun() {
-        MultiTenantDBShardingBundleBase<TestConfig> bundle = getBundle();
+        DBShardingBundleBase<TestConfig> bundle = getBundle();
         bundle.initialize(bootstrap);
         bundle.registerEntities(List.of("io.appform.dropwizard.sharding.dao.testdata.pending"));
         bundle.run(testConfig, environment);
@@ -179,9 +204,10 @@ public abstract class MultiTenantDBShardingBundleTestBase extends MultiTenantBun
     @SneakyThrows
     @SuppressWarnings("unchecked")
     public void testRegisterAlreadyRegisteredEntityPackagesBeforeRun() {
-        MultiTenantDBShardingBundleBase<TestConfig> bundle = getBundle();
+        DBShardingBundleBase<TestConfig> bundle = getBundle();
         bundle.initialize(bootstrap);
-        final var initializedEntities = (List<Class<?>>) FieldUtils.readField(bundle, "initialisedEntities", true);
+        final var delegate = FieldUtils.readField(bundle, "delegate", true);
+        final var initializedEntities = (List<Class<?>>) FieldUtils.readField(delegate, "initialisedEntities", true);
         final var alreadyRegisteredEntityPackages = initializedEntities.stream()
                 .map(Class::getPackageName)
                 .collect(Collectors.toList());
@@ -191,7 +217,7 @@ public abstract class MultiTenantDBShardingBundleTestBase extends MultiTenantBun
 
     @Test
     public void testRegisterEntityClassesFailsAfterRun() {
-        MultiTenantDBShardingBundleBase<TestConfig> bundle = getBundle();
+        DBShardingBundleBase<TestConfig> bundle = getBundle();
         bundle.initialize(bootstrap);
         bundle.run(testConfig, environment);
         final var unsupportedOperationException = Assertions.assertThrows(UnsupportedOperationException.class, () -> {
@@ -207,7 +233,7 @@ public abstract class MultiTenantDBShardingBundleTestBase extends MultiTenantBun
 
     @Test
     public void testRegisterEntityPackagesFailsAfterRun() {
-        MultiTenantDBShardingBundleBase<TestConfig> bundle = getBundle();
+        DBShardingBundleBase<TestConfig> bundle = getBundle();
         bundle.initialize(bootstrap);
         bundle.run(testConfig, environment);
         final var packagesToRegister = List.of("io.appform.dropwizard.sharding.dao.testdata.pending");
